Create new method public String findByAddress(String address) return one station match by address